--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,16 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^5.4 | ^7.0"
+        "php": "^5.4 | ^7.0",
+        "dhii/cqrs-resource-model-interface": "dev-task/initial-interfaces",
+        "rebelcode/cqrs-resource-models-abstract": "dev-task/add-wp-traits",
+        "dhii/normalization-helper-base": "^0.1",
+        "dhii/exception-helper-base": "^0.1",
+        "dhii/i18n-helper-base": "^0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
+        "phpunit/dbunit": "2.0.3",
         "ptrofimov/xpmock": "^1.1",
         "dhii/php-cs-fixer-config": "^0.1",
         "codeclimate/php-test-reporter": "<=0.3.2"
@@ -28,11 +34,18 @@
     "autoload-dev": {
         "psr-4": {
             "RebelCode\\Storage\\Resource\\FuncTest\\": "test/functional",
-            "RebelCode\\Storage\\Resource\\UnitTest\\": "test/unit"
+            "RebelCode\\Storage\\Resource\\UnitTest\\": "test/unit",
+            "RebelCode\\Storage\\Resource\\TestStub\\": "test/stub"
         }
     },
     "scripts": {
         "test": "phpunit",
         "csfix": "php-cs-fixer fix -vvv"
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/Dhii/cqrs-resource-model-interface.git"
+        }
+    ]
 }
